<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/home_cl_base"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home_form_profile.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <Button
                    android:id="@+id/home_btn_notif"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_notifications"
                    app:layout_constraintEnd_toStartOf="@id/home_btn_profile"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/home_btn_profile"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_profile"
                    app:layout_constraintEnd_toEndOf="@id/home_iv_card"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"/>

                <ImageView
                    android:id="@+id/home_iv_header"
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/image_header_home"
                    android:scaleType="fitXY"/>

                <ImageView
                    android:id="@+id/home_iv_card"
                    android:layout_width="320dp"
                    android:layout_height="130dp"
                    android:src="@drawable/shape_back_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/home_iv_header"
                    android:layout_marginBottom="170dp"/>

                    <TextView
                        android:id="@+id/home_text_hi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hi_name"
                        style="@style/Theme_Title_Greating"
                        app:layout_constraintStart_toStartOf="@id/home_iv_card"
                        app:layout_constraintEnd_toEndOf="@id/home_iv_card"
                        app:layout_constraintTop_toTopOf="@id/home_iv_card"
                        android:layout_marginTop="15dp"/>

                    <TextView
                        android:id="@+id/home_text_great"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bagaimana Kabarmu Hari Ini ?"
                        style="@style/Theme_Sub_Greating"
                        app:layout_constraintEnd_toEndOf="@id/home_iv_card"
                        app:layout_constraintStart_toStartOf="@id/home_iv_card"
                        app:layout_constraintTop_toBottomOf="@id/home_text_hi"/>

                <FrameLayout
                    android:id="@+id/home_fl_baik"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_back_button_great"
                    app:layout_constraintStart_toStartOf="@id/home_iv_card"
                    app:layout_constraintBottom_toBottomOf="@id/home_iv_card"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/good"
                        style="@style/Theme_Roboto_Reguler12"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"/>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/emot_smile"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"/>

                </FrameLayout>


                <FrameLayout
                    android:id="@+id/home_fl_kurang_baik"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_back_button_great"
                    app:layout_constraintEnd_toEndOf="@id/home_iv_card"
                    app:layout_constraintBottom_toBottomOf="@id/home_iv_card"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bad"
                        style="@style/Theme_Roboto_Reguler12"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"/>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/emot_smile"
                        android:layout_gravity="center"
                        android:layout_marginEnd="40dp"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/home_fl_form"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:background="@drawable/shape_back_button_form"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_iv_card"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form"
                        style="@style/Theme_Roboto_Bold18"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="50dp"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_form"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="30dp"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/home_fl_call"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:background="@drawable/shape_back_button_call"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_fl_form"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call_report"
                        style="@style/Theme_Roboto_Bold18"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="50dp"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_call"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="30dp"/>

                </FrameLayout>

                <ImageView
                    android:id="@+id/home_bg_line1"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:src="@color/gray"
                    app:layout_constraintTop_toBottomOf="@id/home_fl_call"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/home_bg_text_foryou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_you"
                    style="@style/Theme_Roboto_Reguler18"
                    app:layout_constraintTop_toBottomOf="@id/home_bg_line1"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/home_cv_foryou"
                    android:layout_width="330dp"
                    android:layout_height="160dp"
                    app:cardCornerRadius="30dp"
                    app:layout_constraintTop_toBottomOf="@id/home_bg_text_foryou"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp">

                    
                    <ViewFlipper
                        android:id="@+id/home_vl_hanyauntukmu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>


                </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/home_bg_line2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:src="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/home_cv_foryou"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/home_bg_text_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                style="@style/Theme_Roboto_Reguler18"
                app:layout_constraintTop_toBottomOf="@id/home_bg_line2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/home_bg_text_news_seeall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                style="@style/Theme_Roboto_Reguler12"
                app:layout_constraintTop_toBottomOf="@id/home_bg_line2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="12dp"/>

            <ImageView
                android:id="@+id/home_iv_news"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:src="@drawable/image1"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@id/home_bg_text_news"
                app:layout_constraintStart_toStartOf="@id/home_bg_text_news"
                app:layout_constraintEnd_toEndOf="@id/home_bg_text_news_seeall"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/home_bg_text_kekerasan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bentuk_bentuk_kekerasan"
                style="@style/Theme_Roboto_Reguler18"
                app:layout_constraintTop_toBottomOf="@id/home_iv_news"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/home_bg_text_kekerasan_seeall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                style="@style/Theme_Roboto_Reguler12"
                app:layout_constraintTop_toBottomOf="@id/home_iv_news"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="30dp"/>

            <ImageView
                android:id="@+id/home_iv_kekerasan"
                android:layout_width="300dp"
                android:layout_height="160dp"
                android:src="@drawable/image1"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@id/home_bg_text_kekerasan"
                app:layout_constraintStart_toStartOf="@id/home_bg_text_kekerasan"
                app:layout_constraintEnd_toEndOf="@id/home_bg_text_kekerasan_seeall"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:id="@+id/home_bg_line3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:src="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/home_iv_kekerasan"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/home_bg_text_covid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Informasi Covid-19 Indonesia"
                style="@style/Theme_Roboto_Reguler18"
                app:layout_constraintTop_toBottomOf="@id/home_bg_line3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"/>
            
            <TextView
                android:id="@+id/home_text_number_sembuh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex_1000"
                style="@style/Theme_Roboto_Bold36"
                android:textColor="@color/text_green"
                app:layout_constraintTop_toBottomOf="@id/home_bg_text_covid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/home_text_number_positif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex_1000"
                style="@style/Theme_Roboto_Bold36"
                android:textColor="@color/text_yellow"
                app:layout_constraintTop_toBottomOf="@id/home_bg_text_covid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/home_text_number_sembuh"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/home_text_number_meninggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex_1000"
                style="@style/Theme_Roboto_Bold36"
                android:textColor="@color/text_red"
                app:layout_constraintTop_toBottomOf="@id/home_bg_text_covid"
                app:layout_constraintStart_toEndOf="@id/home_text_number_sembuh"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/home_text_sembuh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sembuh"
                style="@style/Theme_Roboto_Bold14"
                android:textColor="@color/text_green"
                app:layout_constraintTop_toBottomOf="@id/home_text_number_sembuh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Meninggal"
                style="@style/Theme_Roboto_Bold14"
                android:textColor="@color/text_red"
                app:layout_constraintTop_toBottomOf="@id/home_text_number_sembuh"
                app:layout_constraintStart_toEndOf="@id/home_text_number_sembuh"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/positif"
                style="@style/Theme_Roboto_Bold14"
                android:textColor="@color/text_yellow"
                app:layout_constraintTop_toBottomOf="@id/home_text_number_sembuh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/home_text_number_sembuh"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_covid"
                style="@style/Theme_Roboto_Bold14"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/home_text_sembuh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/update_covid"
                style="@style/Theme_Roboto_Bold14"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/home_text_sembuh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="35dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>