<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6D3F2"
    tools:context=".ui.login_register.RegisterActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="412dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_sapa_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="269dp"
        android:layout_height="423dp"
        android:background="@drawable/shape_back_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="191dp"
        android:layout_height="23dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="66dp"
        android:gravity="center"
        android:text="@string/title_register"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/fieldUsername"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="22dp"
        android:ellipsize="end"
        android:hint="   Username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/Register" />

    <EditText
        android:id="@+id/fieldFullname"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:textSize="14sp"
        android:layout_marginEnd="22dp"
        android:ellipsize="end"
        android:hint="   Fullname"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/fieldUsername" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="end"
        android:textSize="14sp"
        android:hint="   Email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/fieldPhonenumber" />

    <EditText
        android:id="@+id/fieldPhonenumber"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="end"
        android:hint="   Phone Number"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/fieldFullname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="22dp"
        android:hint="Password"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="#FFF"
            android:ellipsize="end"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.300"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="313dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="22dp"
        android:hint="Confirm Password"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/fieldPassword2"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="#FFF"
            android:ellipsize="end"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.300"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="313dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="251dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="14dp"
        android:text="By continuing you agree to our Terms of Service and Privacy Policy."
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="137dp"
        android:layout_height="35dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="66dp"
        android:text="@string/title_register"
        android:textColor="#FF000000"
        android:theme="@style/Theme_Bottom_Login"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="283dp"
        android:layout_height="31dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/title_already"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/copyright"
        style="@style/Theme_Footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

